workloads/nginx-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-nodeport
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-nodeport
  template:
    metadata:
      labels:
        app: nginx-nodeport
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: demo
spec:
  type: NodePort
  selector:
    app: nginx-nodeport
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
